dark mode fix

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -10,12 +10,6 @@
     --sidebar-width : 160px;
 }
 
-mark {
-    background-color: rgba(250, 188, 42, 0.51);
-    color: var(--dark-background-color);
-    padding: 0.05em 0.1em;
-    border-radius: 2px;
-}
 
 @media (prefers-color-scheme: dark) {
     :root{
@@ -25,6 +19,16 @@ mark {
     .github-icon {
         content: url('https://img.icons8.com/ios11/512/FFFFFF/github.png');
     }
+    mark {
+        color : var(--background-color);
+        background-color: rgba(255, 231, 181, 0.25);
+    }
+}
+
+mark {
+    background-color: rgba(250, 188, 42, 0.5);
+    padding: 0.05em 0.1em;
+    border-radius: 2px;
 }
 
 .github-icon {
